fixing so results lists show up.  points assigned based on heats.

--- a/mooseleague/mooseleague.css
+++ b/mooseleague/mooseleague.css
@@ -37,3 +37,11 @@ table {
 .link {
   font-size: .9rem;
 }
+
+.winner {
+  font-weight: bold;
+  color: green;
+}
+.loser {
+  text-decoration: line-through;
+}
